--- a/app/src/main/res/layout/tab5_fragment.xml
+++ b/app/src/main/res/layout/tab5_fragment.xml
@@ -14,13 +14,28 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/cvWillGo"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_below="@+id/cvHobbies"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="10dp"
+            android:elevation="30dp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
             <TextView
                 android:id="@+id/willGoTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/myActionsTitle"
                 android:layout_marginStart="25dp"
-                android:layout_marginTop="135dp"
+                android:layout_marginTop="10dp"
                 android:text="@string/willGo"
                 android:textSize="18sp" />
 
@@ -34,13 +49,27 @@
                 android:background="@drawable/onlybottomrounded"
                 android:scaleType="fitXY"
                 android:src="@drawable/underconst2" />
+        </RelativeLayout>
+        </android.support.v7.widget.CardView>
 
-
+        <android.support.v7.widget.CardView
+            android:id="@+id/cvMyActions"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_below="@+id/cvWillGo"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="10dp"
+            android:elevation="30dp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
             <TextView
                 android:id="@+id/myActionsTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/hobbyTitle"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="55dp"
                 android:text="@string/eventsProfile"
@@ -56,97 +85,129 @@
                 android:background="@drawable/onlybottomrounded"
                 android:scaleType="fitXY"
                 android:src="@drawable/underconst1" />
+        </RelativeLayout>
+        </android.support.v7.widget.CardView>
 
 
+            <android.support.v7.widget.CardView
+                android:id="@+id/cvHobbies"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_below="@+id/cvProfile"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="10dp"
+                android:elevation="30dp">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <TextView
+                    android:id="@+id/hobbyTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="25dp"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/hobbyProfile"
+                    android:textSize="18sp" />
 
-            <TextView
-                android:id="@+id/hobbyTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/profileIcons"
-                android:layout_marginStart="25dp"
-                android:layout_marginTop="55dp"
-                android:text="@string/hobbyProfile"
-                android:textSize="18sp" />
+                <TextView
+                    android:id="@+id/txtCtg1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/hobbyTitle"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/roundedborderedtext"
+                    android:padding="3dp"
+                    android:paddingEnd="7dp"
+                    android:paddingStart="7dp"
+                    android:text="Doğa"
+                    android:textSize="12sp" />
 
-            <TextView
-                android:id="@+id/txtCtg1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/hobbyTitle"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/roundedborderedtext"
-                android:padding="3dp"
-                android:paddingEnd="7dp"
-                android:paddingStart="7dp"
-                android:text="Doğa"
-                android:textSize="12sp" />
+                <TextView
+                    android:id="@+id/txtCtg2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/hobbyTitle"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_toEndOf="@+id/txtCtg1"
+                    android:background="@drawable/roundedborderedtext"
+                    android:padding="3dp"
+                    android:paddingEnd="7dp"
+                    android:paddingStart="7dp"
+                    android:text="Kültür ve Sanat"
+                    android:textSize="12sp" />
 
-            <TextView
-                android:id="@+id/txtCtg2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/hobbyTitle"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="5dp"
-                android:layout_toEndOf="@+id/txtCtg1"
-                android:background="@drawable/roundedborderedtext"
-                android:padding="3dp"
-                android:paddingEnd="7dp"
-                android:paddingStart="7dp"
-                android:text="Kültür ve Sanat"
-                android:textSize="12sp" />
+                <TextView
+                    android:id="@+id/txtCtg3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/hobbyTitle"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_toEndOf="@+id/txtCtg2"
+                    android:background="@drawable/roundedborderedtext"
+                    android:padding="3dp"
+                    android:paddingEnd="7dp"
+                    android:paddingStart="7dp"
+                    android:text="Teknoloji"
+                    android:textSize="12sp" />
 
-            <TextView
-                android:id="@+id/txtCtg3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/hobbyTitle"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="5dp"
-                android:layout_toEndOf="@+id/txtCtg2"
-                android:background="@drawable/roundedborderedtext"
-                android:padding="3dp"
-                android:paddingEnd="7dp"
-                android:paddingStart="7dp"
-                android:text="Teknoloji"
-                android:textSize="12sp" />
+                <TextView
+                    android:id="@+id/txtCtg4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/hobbyTitle"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_toEndOf="@+id/txtCtg3"
+                    android:background="@drawable/roundedborderedtext"
+                    android:padding="3dp"
+                    android:paddingEnd="7dp"
+                    android:paddingStart="7dp"
+                    android:text="Aile ve Çocuk"
+                    android:textSize="12sp" />
 
-            <TextView
-                android:id="@+id/txtCtg4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/hobbyTitle"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="5dp"
-                android:layout_toEndOf="@+id/txtCtg3"
-                android:background="@drawable/roundedborderedtext"
-                android:padding="3dp"
-                android:paddingEnd="7dp"
-                android:paddingStart="7dp"
-                android:text="Aile ve Çocuk"
-                android:textSize="12sp" />
+                <TextView
+                    android:id="@+id/txtCtg5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/txtCtg1"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/roundedborderedtext"
+                    android:padding="3dp"
+                    android:paddingEnd="7dp"
+                    android:paddingStart="7dp"
+                    android:text="Seyahat"
+                    android:textSize="12sp" />
+            </RelativeLayout>
+            </android.support.v7.widget.CardView>
 
-            <TextView
-                android:id="@+id/txtCtg5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/txtCtg1"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/roundedborderedtext"
-                android:padding="3dp"
-                android:paddingEnd="7dp"
-                android:paddingStart="7dp"
-                android:text="Seyahat"
-                android:textSize="12sp" />
+            <android.support.v7.widget.CardView
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:id="@+id/cvProfile"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="10dp"
+                android:elevation="30dp">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profilePic"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_marginStart="30dp"
+                android:layout_marginStart="15dp"
+                android:elevation="10dp"
                 android:layout_marginTop="18dp"
                 android:background="@mipmap/androidlogo" />
 
@@ -234,17 +295,21 @@
                 android:id="@+id/imgSetProfile"
                 android:layout_width="80dp"
                 android:layout_height="20dp"
-                android:layout_alignTop="@+id/pointOfEvents"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="30dp"
                 android:layout_toEndOf="@+id/profileMotto"
                 app:srcCompat="@drawable/setprofile" />
 
             <Button
                 android:id="@+id/btnLogout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/numberOfEvents"
+                android:layout_width="38dp"
+                android:layout_height="19dp"
+                android:layout_marginTop="110dp"
+                android:layout_marginStart="60dp"
                 android:layout_toEndOf="@+id/profileMotto"
-                android:text="Çıkış yap" />
+                android:background="@drawable/btnlogout"/>
+                </RelativeLayout>
+            </android.support.v7.widget.CardView>
 
         </RelativeLayout>
     </ScrollView>
