--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -26,7 +26,7 @@
             app:srcCompat="@drawable/whitelandedcirclelogo" />
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/edtSearchEvent"
             android:layout_width="315dp"
             android:layout_height="27dp"
             android:layout_alignParentStart="true"
