--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomepageActivity">
+    tools:context=".SearchActivity">
 
     <RelativeLayout
+        android:id="@+id/rlHeader"
         android:layout_width="match_parent"
         android:layout_height="58dp"
         android:layout_alignParentStart="true"
@@ -20,7 +21,7 @@
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:layout_marginStart="15dp"
-            app:srcCompat="@drawable/logo" />
+            app:srcCompat="@drawable/whitelandedcirclelogo" />
 
         <EditText
             android:id="@+id/edtSearchEvent"
@@ -47,4 +48,5 @@
             android:layout_marginEnd="28dp"
             android:background="@drawable/iconsearch" />
     </RelativeLayout>
+
 </RelativeLayout>
