--- a/app/src/main/res/layout/tab3_fragment.xml
+++ b/app/src/main/res/layout/tab3_fragment.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:background="@color/grayBackground"
@@ -14,29 +15,137 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp">
 
-            <View
+            <android.support.v7.widget.CardView
                 android:id="@+id/vwDudulaHolder"
                 android:layout_width="match_parent"
-                android:layout_height="280dp"
+                android:layout_height="290dp"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginEnd="15dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="15dp"
-                android:background="@drawable/borders" />
-
+                app:cardCornerRadius="10dp"
+                app:cardElevation="10dp"
+                android:elevation="30dp">
             <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/cvQuick"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginTop="15dp"
+                    app:cardCornerRadius="10dp"
+                    app:cardElevation="10dp"
+                    android:elevation="30dp">
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/grayButton">
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/quickevent"
+                            android:padding="15dp"/>
+                    </RelativeLayout>
+
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/cvEvent"
+                    android:layout_below="@+id/cvQuick"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_alignStart="@+id/cvQuick"
+                    android:layout_marginTop="15dp"
+                    app:cardCornerRadius="10dp"
+                    app:cardElevation="10dp"
+                    android:elevation="30dp">
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/grayButton">
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/event"
+                            android:padding="15dp"/>
+                    </RelativeLayout>
+
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/cvLocation"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_toEndOf="@id/cvQuick"
+                    app:cardCornerRadius="10dp"
+                    app:cardElevation="10dp"
+                    android:elevation="30dp">
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/grayButton">
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/searchbylocation"
+                            android:padding="15dp"/>
+                    </RelativeLayout>
+
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/cvAdcanced"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_toEndOf="@id/cvQuick"
+                    android:layout_below="@+id/cvLocation"
+                    app:cardCornerRadius="10dp"
+                    app:cardElevation="10dp"
+                    android:elevation="30dp">
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/grayButton">
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/searchadvanced"
+                            android:padding="15dp"/>
+                    </RelativeLayout>
+
+                </android.support.v7.widget.CardView>
+
+            </RelativeLayout>
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
                 android:id="@+id/dudulaAds"
+                android:layout_below="@id/vwDudulaHolder"
+                android:layout_marginTop="15dp"
                 android:layout_width="match_parent"
                 android:layout_height="175dp"
-                android:layout_below="@+id/dudulaOptions"
                 android:layout_marginEnd="15dp"
                 android:layout_marginStart="15dp"
-                android:layout_marginTop="300dp"
-                android:background="@drawable/borders">
+                android:layout_marginBottom="20dp"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="10dp"
+                android:elevation="30dp">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
                 <TextView
                     android:id="@+id/dudulaAdTitle"
@@ -85,7 +194,9 @@
                             android:src="@drawable/kofteciyusuf" />
                     </RelativeLayout>
                 </HorizontalScrollView>
-            </RelativeLayout>
+
+                </RelativeLayout>
+            </android.support.v7.widget.CardView>
         </RelativeLayout>
     </ScrollView>
 
