--- a/app/src/main/res/layout/tab5_fragment.xml
+++ b/app/src/main/res/layout/tab5_fragment.xml
@@ -291,23 +291,23 @@
                 android:textColor="#ffca54"
                 android:textSize="12sp" />
 
-            <ImageView
-                android:id="@+id/imgSetProfile"
-                android:layout_width="80dp"
-                android:layout_height="20dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="30dp"
-                android:layout_toEndOf="@+id/profileMotto"
-                app:srcCompat="@drawable/setprofile" />
+                    <ImageView
+                        android:id="@+id/imgSetProfile"
+                        android:layout_width="80dp"
+                        android:layout_height="20dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="20dp"
+                        android:layout_marginTop="10dp"
+                        app:srcCompat="@drawable/setprofile" />
 
-            <Button
-                android:id="@+id/btnLogout"
-                android:layout_width="38dp"
-                android:layout_height="19dp"
-                android:layout_marginTop="110dp"
-                android:layout_marginStart="60dp"
-                android:layout_toEndOf="@+id/profileMotto"
-                android:background="@drawable/btnlogout"/>
+                    <Button
+                        android:id="@+id/btnLogout"
+                        android:layout_width="38dp"
+                        android:layout_height="19dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="25dp"
+                        android:layout_marginTop="110dp"
+                        android:background="@drawable/btnlogout" />
                 </RelativeLayout>
             </android.support.v7.widget.CardView>
 
