--- a/app/src/main/res/layout/tab1_fragment.xml
+++ b/app/src/main/res/layout/tab1_fragment.xml
@@ -267,7 +267,7 @@
                             android:layout_width="120dp"
                             android:layout_height="match_parent"
                             android:scaleType="fitXY"
-                            android:src="@drawable/sponsoredevents1" />
+                            android:src="@drawable/spntemp" />
 
                         <TextView
                             android:id="@+id/txtSpn1"
@@ -288,7 +288,7 @@
                             android:layout_height="match_parent"
                             android:layout_toEndOf="@+id/spnImage1"
                             android:scaleType="fitXY"
-                            android:src="@drawable/sponsoredevents4" />
+                            android:src="@drawable/spntemp" />
 
                         <TextView
                             android:id="@+id/txtSpn2"
@@ -309,7 +309,7 @@
                             android:layout_height="match_parent"
                             android:layout_toEndOf="@+id/spnImage2"
                             android:scaleType="fitXY"
-                            android:src="@drawable/sponsoredevents3" />
+                            android:src="@drawable/spntemp" />
 
                         <TextView
                             android:id="@+id/txtSpn3"
@@ -330,7 +330,7 @@
                             android:layout_height="match_parent"
                             android:layout_toEndOf="@+id/spnImage3"
                             android:scaleType="fitXY"
-                            android:src="@drawable/sponsoredevents2" />
+                            android:src="@drawable/spntemp" />
 
                         <TextView
                             android:id="@+id/txtSpn4"
